Bug 1813719: Remove `size` attribute from `GPUCanvasConfiguration`. r=jgilbert,emilio

In [gpuweb#2826](https://github.com/gpuweb/gpuweb/pull/2826), the
`size` attribute was removed from `GPUCanvasConfiguration`. Since the
fuzzers have discovered that the `size` attribute is a fun toy to play
with, it's time to update Firefox to match the spec.

Differential Revision: https://phabricator.services.mozilla.com/D168575