dom/webgpu/Device.cpp
@@ -287,30 +287,12 @@ already_AddRefed<dom::Promise> Device::CreateRenderPipelineAsync(
 already_AddRefed<Texture> Device::InitSwapChain(
     const dom::GPUCanvasConfiguration& aDesc,
     const layers::RemoteTextureOwnerId aOwnerId, gfx::SurfaceFormat aFormat,
-    gfx::IntSize* aCanvasSize) {
+    gfx::IntSize aCanvasSize) {
   if (!mBridge->CanSend()) {
     return nullptr;
   }
 
-  gfx::IntSize size = *aCanvasSize;
-  if (aDesc.mSize.WasPassed()) {
-    const auto& descSize = aDesc.mSize.Value();
-    if (descSize.IsRangeEnforcedUnsignedLongSequence()) {
-      const auto& seq = descSize.GetAsRangeEnforcedUnsignedLongSequence();
-      // TODO: add a check for `seq.Length()`
-      size.width = AssertedCast<int>(seq[0]);
-      size.height = AssertedCast<int>(seq[1]);
-    } else if (descSize.IsGPUExtent3DDict()) {
-      const auto& dict = descSize.GetAsGPUExtent3DDict();
-      size.width = AssertedCast<int>(dict.mWidth);
-      size.height = AssertedCast<int>(dict.mHeight);
-    } else {
-      MOZ_CRASH("Unexpected union");
-    }
-    *aCanvasSize = size;
-  }
-
-  const layers::RGBDescriptor rgbDesc(size, aFormat);
+  const layers::RGBDescriptor rgbDesc(aCanvasSize, aFormat);
   // buffer count doesn't matter much, will be created on demand
   const size_t maxBufferCount = 10;
   mBridge->DeviceCreateSwapChain(mId, rgbDesc, maxBufferCount, aOwnerId);
@@ -318,8 +300,8 @@ already_AddRefed<Texture> Device::InitSwapChain(
   dom::GPUTextureDescriptor desc;
   desc.mDimension = dom::GPUTextureDimension::_2d;
   auto& sizeDict = desc.mSize.SetAsGPUExtent3DDict();
-  sizeDict.mWidth = size.width;
-  sizeDict.mHeight = size.height;
+  sizeDict.mWidth = aCanvasSize.width;
+  sizeDict.mHeight = aCanvasSize.height;
   sizeDict.mDepthOrArrayLayers = 1;
   desc.mFormat = aDesc.mFormat;
   desc.mMipLevelCount = 1;
